Add select option

--- a/OOP/BicycleExp/index.html
+++ b/OOP/BicycleExp/index.html
@@ -44,8 +44,8 @@
             </div>
             <div class="row">
                 <div class="six columns">
-                    <label for="exampleRecipientInput">Type</label>
-                    <select class="u-full-width" id="exampleRecipientInput">
+                    <label for="type">Type</label>
+                    <select class="u-full-width" id="type">
                         <option value="sport">Sport</option>
                         <option value="touring">Touring</option>
                         <option value="cyclocross">Cyclocross</option>
