--- a/OOP/BicycleExp/index.html
+++ b/OOP/BicycleExp/index.html
@@ -79,7 +79,7 @@
                 <label for="img-alt">Image Alt</label>
                 <input type="text" id="img-alt" class="u-full-width" placeholder="Describe a new bicycle here...">
             </div>
-            <fieldset class="">
+            <!-- <fieldset class="">
                 <label class="">Upload Bicycle foto</label>
                 <div class="">
                     <div class="">
@@ -87,7 +87,7 @@
                     </div>
                     <div class=""></div>
                 </div>
-            </fieldset>
+            </fieldset> -->
 
             <button type="submit" value="submit" class="u-full-width">Submit</button>
         </form>
@@ -110,7 +110,7 @@
         </table>
     </div>
 
-    <script src="app-5.js"></script>
+    <script src="app-6.js"></script>
 
 </body>
 
