Resolve xmlHttpRequest for a github project

--- a/GitHub Finder/index.html
+++ b/GitHub Finder/index.html
@@ -19,11 +19,15 @@
         <div class="serach card card-body">
             <h1>Search GitHub Users</h1>
             <p class="lead">Enter a username to fetch a user profile and repos</p>
-            <input type="text" id="search-user" class="form-control" placeholder="GitHub Username...">
+            <input type="text" id="searchUser" class="form-control" placeholder="GitHub Username...">
         </div>
         <br>
-        <div id="profile"></div>
+        <div id="profile">
+            <div id="repository"></div>
+        </div>
     </div>
+
+    
 <footer class="mt-5 p-3 text-center bg-light">
     GitHub Finder &copy
 </footer>
