--- a/GitHub Finder/index.html
+++ b/GitHub Finder/index.html
@@ -16,7 +16,7 @@
         </div>
     </navbar>
     <div class="container searchContainer">
-        <div class="serach card card-body">
+        <div class="search card card-body">
             <h1>Search GitHub Users</h1>
             <p class="lead">Enter a username to fetch a user profile and repos</p>
             <input type="text" id="searchUser" class="form-control" placeholder="GitHub Username...">
