--- a/Weather app/index.html
+++ b/Weather app/index.html
@@ -14,7 +14,7 @@
         <h1 id="w-location"></h1>
         <h3 class="text-dark" id="w-desc"></h3>
         <h3 id="w-string"></h3>
-        <img id="w-icon">
+        <img id="w-icon" width="50" height="50">
         <ul id="w-details" class="list-group mt-3">
           <li class="list-group-item" id="w-humidity"></li>
           <li class="list-group-item" id="w-pressure"></li>
