Add new function

--- a/w3c-training/dom/index.html
+++ b/w3c-training/dom/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="exercise-1">
-        <h2>Esercise 1</h2>
+        <h2>Exercise 1</h2>
         <p id='text'>JavaScript Exercises - w3resource</p>
         <div>
             <button id="jsstyle" onclick="js_style()">Style</button>
@@ -18,7 +18,7 @@
     </div>
 
     <div class="exercise-2">
-        <h2>Esercise 2</h2>
+        <h2>Exercise 2</h2>
         <form id="form1">
             First name: <input type="text" name="fname" value="David"><br>
             Last name: <input type="text" name="lname" value="Beckham"><br>
